[metadata]
name = ipyscan
version = 1.0.29
author = gh05tb0y (Werdeles Soares)
author_email = gh05tb0y@disroot.org
description = Scanner de portas TCP com banner grabbing
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    ipyscan = ipyscan.__main__:ipyscan